# BugFree

./: README.md  package-lock.json  package.json  server.js
codepilot-ai/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
codepilot-ai/services/api/: Dockerfile  alembic.ini  pyproject.toml
codepilot-ai/services/api/alembic/: env.py
codepilot-ai/services/api/alembic/versions/: 20260717_01_platform_feature_flags.py  20260717_02_identity.py
codepilot-ai/services/api/app/: __init__.py
codepilot-ai/services/api/app/application/: __init__.py  auth_service.py  feature_flags.py  health_service.py  organization_service.py
codepilot-ai/services/api/app/domain/: __init__.py  health.py  identity.py
codepilot-ai/services/api/app/infrastructure/: __init__.py  config.py  logging.py  persistence.py  rate_limit.py  readiness.py  security.py
codepilot-ai/services/api/app/presentation/: __init__.py
codepilot-ai/services/api/app/presentation/http/: __init__.py  auth.py  main.py  organizations.py  rate_limit.py  routes.py  schemas.py
codepilot-ai/services/api/tests/: __init__.py  conftest.py
codepilot-ai/services/api/tests/integration/: test_auth_contract.py  test_platform_routes.py
codepilot-ai/services/api/tests/unit/: test_config.py  test_health_service.py  test_identity.py  test_organization_authorization.py  test_rate_limit.py  test_security.py
frontend/: app.js  extras.css  fixes.css  index.html  local-app.js  react-app.js  react.css  review.css  source-review.css  styles.css  theme.css  upgrade.css
(+18 files in other folders)
