[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilot-api"
version = "0.1.0"
description = "CodePilot AI platform API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic-settings>=2.7,<3",
  "prometheus-client>=0.21,<0.22",
  "SQLAlchemy>=2.0.36,<2.1",
  "alembic>=1.14,<1.15",
  "psycopg[binary]>=3.2,<3.3",
  "asyncpg>=0.30,<0.31",
  "redis>=5.2,<6",
  "httpx>=0.28,<0.29",
  "PyJWT>=2.10,<3",
  "argon2-cffi>=23.1,<24",
  "email-validator>=2.2,<3"
]

[project.optional-dependencies]
dev = [
  "black>=24.10,<25",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
  "types-redis>=4.6.0.20241004"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["tests"]
